<resources>
    <string name="facebook_app_id">1599183807050629</string>

    <string name="registro">Registro de Usuario</string>
    <string name="app_name">ConferenciaEpiscopalBoliviana</string>
    <string name="main_title">Conferencia Episcopal Boliviana</string>
    <string name="action_settings">Settings</string>
    <string name="buscarObra">BUSCAR OBRA</string>
    <string name="ingresar">INGRESAR</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_navigation">Welcome</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Datos -->
    <string name="pregunta_1">¿Que es la Conferencia Episcopal Boliviana?</string>
    <string name="respuesta_1_1">
        La Conferencia Episcopal Boliviana es el organismo colegiado de todos los Obispos de Bolivia.
    </string>
    <string name="respuesta_1_2">
        Se reúne en Asambleas periódicas dos veces por año y su objetivo es coordinar y animar el trabajo pastoral de la Iglesia Católica en Bolivia. Al mismo tiempo también mantiene su mirada atenta en la realidad nacional a fin de llevar a cabo su misión de manera mas comprometida y verdadera.
    </string>
    <string name="pregunta_2">¿Quiénes la presiden?</string>
    <string name="respuesta_2">...</string>
    <string name="pregunta_3">¿Quiénes están representados en la CEB?</string>
    <string name="respuesta_3">
        El Obispo es la cabeza de una Iglesia Local. En Bolivia la Iglesia Católica cuenta con 18 jurisdicciones eclesiásticas. El Obispo representa al pueblo de Dios, a todos los católicos y católicas del país.
    </string>
    <string name="pregunta_4">¿Qué significa la Asamblea de Obispos para el país y la Iglesia?</string>
    <string name="respuesta_4_1">
        La Asamblea es un espacio de animación pastoral y de reflexión a la luz de la fe, a fin de que la Iglesia Católica en el país sea cada vez más fiel a la misión encomendada por su fundador Jesucristo: el anuncio del Evangelio y la liberación integral de la persona.
    </string>
    <string name="respuesta_4_2">
        Durante las Asambleas se evalúa la labor pastoral de la Iglesia en distintos ámbitos y niveles y también se brinda una palabra orientadora a la sociedad boliviana frente a la compleja realidad social: económica, política, cultural, palabra que procura estar siempre inspirada en los principios evangélicos.
    </string>
    <string name="respuesta_4_3">
        En la Asamblea de Obispos también participan los representantes de los otros sectores del Pueblo de Dios, los presidentes de:
        \nLa Conferencia Boliviana de Religiosos y Religiosas - CBR
        \nLa Conferencia Boliviana del Clero Diocesano - CBCD
        \nEl Consejo Nacional de Laicos - CNL
    </string>
    <string name="title_activity_detalle_obra">" "</string>
</resources>
